--- a/Platinum Challenge Deep Learning(NN & LSTM) - DSC Wave 19.ipynb
+++ b/Platinum Challenge Deep Learning(NN & LSTM) - DSC Wave 19.ipynb
@@ -887,26 +887,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m69/69\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 28ms/step\n",
+      "\u001b[1m69/69\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 32ms/step\n",
       "Testing selesai\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.65      0.83      0.73       672\n",
-      "           1       1.00      0.05      0.10       239\n",
-      "           2       0.90      0.92      0.91      1289\n",
+      "           0       0.84      0.91      0.87       672\n",
+      "           1       0.88      0.84      0.86       239\n",
+      "           2       0.96      0.93      0.95      1289\n",
       "\n",
-      "    accuracy                           0.80      2200\n",
-      "   macro avg       0.85      0.60      0.58      2200\n",
-      "weighted avg       0.83      0.80      0.77      2200\n",
+      "    accuracy                           0.91      2200\n",
+      "   macro avg       0.90      0.89      0.89      2200\n",
+      "weighted avg       0.92      0.91      0.91      2200\n",
       "\n",
-      "Accuracy Score SDG (0.00075) : 0.8\n"
+      "Accuracy Score SDG (0.00075) : 0.91\n"
      ]
     }
    ],
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
     "\n",
     "class_labels = ['negatif', 'netral', 'positif']\n",
     "\n",
-    "original_text = 'HAH... Tiba-tiba tidak bisa login ke dalam permainan!!! Dikatakan sinyal saya tidak stabil, sorry ye... Sinyal saya stabil Boss tetapi tetap tidak bisa login. kan aneh..'\n",
+    "original_text = 'anak sekarang sulit untuk dinasehati'\n",
     "cleaned_text = cleansing(original_text)\n",
     "text_sequence = tokenizer.texts_to_sequences([cleaned_text])\n",
     "text_padded = pad_sequences(text_sequence, maxlen=55)\n",
