--- a/Platinum Challenge Deep Learning NN - DSC Wave 19.ipynb
+++ b/Platinum Challenge Deep Learning NN - DSC Wave 19.ipynb
@@ -11,7 +11,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\Admin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\Admin\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import pickle\n",
@@ -19,12 +32,24 @@
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
+    "import nltk\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
+    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('punkt')\n",
+    "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense, Dropout, Bidirectional, Flatten\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "from keras.models import load_model\n",
+    "\n",
+    "factory = StemmerFactory()\n",
+    "stemmer = factory.create_stemmer()\n",
+    "list_stopwords = set(stopwords.words('indonesian'))"
    ]
   },
   {
@@ -36,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +154,7 @@
        "4  aduh mahasiswa sombong kasih kartu kuning ajar...  negative  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +209,7 @@
        "(11000, 55)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,6 +228,26 @@
     "\n",
     "# Menampilkan bentuk akhir dari data\n",
     "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenizer berhasil disimpan!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "with open('tokenizer.pickle', 'wb') as handle:\n",
+    "    pickle.dump(tokenizer, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "print(\"Tokenizer berhasil disimpan!\")"
    ]
   },
   {
@@ -1580,20 +1625,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 123ms/step\n",
+      "Original text: babi lo prab*w* anjing gua sumpahin kamu mati saja . dasar sampah masyarakat .1234\n",
+      "Cleaned text: babi lo prab w anjing gua sumpahin mati dasar sampah masyarakat\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 251ms/step\n",
       "Sentiment :\n",
-      "netral\n"
+      "negatif\n"
      ]
     }
    ],
    "source": [
+    "# Memuat model\n",
+    "model_nn = load_model('nn_model.h5')\n",
+    "\n",
+    "# Memuat tokenizer\n",
+    "with open('tokenizer.pickle', 'rb') as handle:\n",
+    "    tokenizer = pickle.load(handle)\n",
+    "    \n",
     "def cleansing(text):\n",
     "    text = re.sub(r'\\\\t|\\\\n|\\\\u', ' ', text) #Menghapus karakter khusus seperti tab, baris baru, karakter Unicode, dan backslash.\n",
     "    text = re.sub(r\"https?:[^\\s]+\", ' ', text)  # Menghapus http / https\n",
@@ -1603,12 +1664,19 @@
     "    text = re.sub(r'[^a-zA-Z]+', ' ', text)  # Menghapus karakter kecuali huruf, dan spasi\n",
     "    text = re.sub(r'\\brt\\b|\\buser\\b', ' ', text) # Menghapus kata-kata 'rt' dan 'user'\n",
     "    text = text.lower()\n",
+    "    tokens = nltk.word_tokenize(text)  # Tokenisasi\n",
+    "    tokens = [word for word in tokens if word not in list_stopwords]  # Menghapus stopwords\n",
+    "    tokens = [stemmer.stem(word) for word in tokens]  # Stemming\n",
+    "    text = ' '.join(tokens)  # Menggabungkan kembali teks\n",
     "    return text\n",
     "\n",
     "class_labels = ['negatif', 'netral', 'positif']\n",
     "\n",
-    "original_text = '08:30 : kedatangan presiden ri dan rombongan di gate 2 , terminal 3 disambut oleh menteri perhubungan , menteri bumn , gubernur banten , dirjen perkeretaapian kemhub , dirut ap2 , dirut pt kami , dan dirut railink'\n",
+    "original_text = 'babi lo prab*w* anjing gua sumpahin kamu mati saja . dasar sampah masyarakat .1234'\n",
     "cleaned_text = cleansing(original_text)\n",
+    "print(\"Original text:\", original_text)\n",
+    "print(\"Cleaned text:\", cleaned_text)\n",
+    "\n",
     "text_sequence = tokenizer.texts_to_sequences([cleaned_text])\n",
     "text_padded = pad_sequences(text_sequence, maxlen=55)\n",
     "\n",
@@ -1618,23 +1686,6 @@
     "\n",
     "print('Sentiment :')\n",
     "print(predicted_label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.figure(figsize=(10,5))\n",
-    "# plt.title('Loss')\n",
-    "# plt.plot(n_epochs, result['loss'])\n",
-    "# plt.plot(n_epochs, result['val_loss'])\n",
-    "# plt.xlabel('Epoch')\n",
-    "# plt.ylabel('Loss')\n",
-    "# plt.legend(['Train', 'Val'])\n",
-    "# plt.grid()\n",
-    "# plt.show()"
    ]
   }
  ],
